--- a/src/output.css
+++ b/src/output.css
@@ -8,19 +8,20 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  font-size: clamp(10px, 2.5vw, 18px);
+  font-size: clamp(13px, 2.5vw, 16px);
 }
 
 .Layout {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  gap: 2rem;
 }
 
 .Container {
-  width: 90%;
   max-width: 90rem;
   margin: auto;
+  padding: 0px 20px 0px 20px;
 }
 
 #navbar {
@@ -34,6 +35,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+#navbar .NavBox .burgerButton {
+  display: none;
 }
 #navbar .NavLogo {
   display: flex;
@@ -74,6 +78,39 @@ body {
   display: flex;
   color: black;
 }
+#navbar .sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+#navbar .sidenav a {
+  padding: 8px 8px 8px 20px;
+  text-decoration: none;
+  font-size: 20px;
+  color: #818181;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  transition: 0.3s;
+}
+#navbar .sidenav a:hover {
+  color: #f1f1f1;
+}
+#navbar .sidenav .closebtn {
+  position: absolute;
+  color: #818181;
+  top: 20px;
+  cursor: pointer;
+  right: 20px;
+  margin-left: 50px;
+}
 
 #footer {
   color: white;
@@ -87,7 +124,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 20px 0 20px 0;
-  font-size: 13px;
+  font-size: clamp(13px, 2.5vw, 16px);
 }
 .footerInfo .footerGroup a {
   color: gray;
@@ -98,13 +135,16 @@ body {
 
 #Contact {
   background: #3E3B3B;
+  padding: 0px 20px 0px 20px;
 }
 #Contact .ContactContainer {
   display: flex;
   justify-content: space-between;
   padding: 20px 0 20px 0;
+  width: auto;
+  margin: auto;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 30px;
 }
 #Contact .ContactContainer .ContactGroup {
   color: white;
@@ -112,11 +152,16 @@ body {
   flex-direction: column;
   gap: 10px;
 }
+#Contact .ContactContainer .ContactGroup .ContactPadding {
+  padding-left: 22px;
+}
 #Contact .ContactContainer .ContactGroup .ContactListGroup {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  font-size: 12px;
+}
+#Contact .ContactContainer .ContactGroup .ContactListGroup a:hover {
+  text-decoration: underline;
 }
 #Contact .ContactContainer .ContactGroup .ContactIcon {
   font-size: 1rem;
@@ -141,18 +186,100 @@ body {
 #Contact .ContactContainer .ContactGroup #socialGroup {
   display: flex;
   gap: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 2rem;
+}
+#Contact .ContactContainer .ContactGroup #socialGroup li {
+  transition: all 0.5s ease-in-out;
+}
+#Contact .ContactContainer .ContactGroup #socialGroup li:hover {
+  transform: scale(120%);
 }
 
 #homepage {
   flex: 1;
-  min-height: 100vh;
+}
+#homepage #heroGrid {
+  display: grid;
+  min-height: 40rem;
+  max-height: 40rem;
+  gap: 10px;
+  padding-bottom: 2rem;
+  grid-template: repeat(2, 1fr)/repeat(4, 1fr);
+}
+#homepage #heroGrid .HeroGroup {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+#homepage #heroGrid .HeroGroup p {
+  color: white;
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  font-size: clamp(2rem, 2.5vw, 3rem);
+  font-weight: bold;
+}
+#homepage #heroGrid .HeroGroup img {
+  object-fit: cover;
+  object-position: 40% 20%;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  filter: brightness(50%);
+  transition: all 0.3s ease-in-out;
+}
+#homepage #heroGrid .HeroGroup a:hover img {
+  filter: brightness(80%);
+  transform: scale(1.2);
+}
+#homepage #heroGrid .heroItem1 {
+  grid-area: 1/1/span 2/span 2;
+}
+#homepage #heroGrid .heroItem2 {
+  grid-area: 1/3/1/3;
+}
+#homepage #heroGrid .heroItem3 {
+  grid-area: 2/3/2/3;
+}
+#homepage #heroGrid .heroItem4 {
+  grid-area: 1/4/span 2/4;
+}
+#homepage #trendingGroup {
+  min-height: 30vh;
+  background-color: lightcoral;
 }
 
 @media only screen and (max-width: 600px) {
+  .ContactContainer {
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+  }
+  .ContactIcon {
+    display: none;
+  }
+  .ContactPadding {
+    padding: 0 !important;
+  }
   .footerGroup {
     flex-direction: column-reverse;
     gap: 10px;
+  }
+  .NavItems {
+    display: none !important;
+  }
+  .burgerButton {
+    display: flex !important;
+  }
+}
+@media only screen and (max-width: 900px) {
+  #heroGrid {
+    display: flex !important;
+    flex-direction: column;
+  }
+  #heroGrid p {
+    font-size: clamp(2rem, 10vw, 5rem) !important;
   }
 }
 
