--- a/src/input.scss
+++ b/src/input.scss
@@ -32,6 +32,9 @@ body{
   max-width: 90rem;
   margin: auto;
   padding: 0px 20px 0px 20px;
+  // display: flex;
+  // flex-direction: column;
+  // gap: 10rem;
 
 }
 
@@ -96,7 +99,6 @@ body{
 
     a {
       display:flex;
-      color: black;
     }
   }
   // Mobile Nav
@@ -252,7 +254,7 @@ body{
     min-height: 40rem;
     max-height: 40rem;
     gap: 10px;
-    padding-bottom: 2rem;
+    padding-bottom: 8rem;
     grid-template: repeat(2, 1fr) / repeat(4, 1fr);
     
     .HeroGroup {
@@ -306,9 +308,147 @@ body{
   }
 
   // Trending
-  #trendingGroup{
-    min-height: 30vh;
-    background-color: lightcoral;
+  #trendingSection{
+    flex: 1;
+
+    .TrendingGroup{
+      padding-bottom: 8rem;
+      position: relative;
+
+      .NextButton{
+        background-color: white;
+        padding: 3px;
+        cursor: pointer;
+        box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+      }
+
+      #left-button{
+        position: absolute;
+        top: 13rem;
+        left: -1rem;
+      }
+
+      #right-button{
+        position: absolute;
+        top: 13rem;
+        right: -1rem;
+      }
+
+      h1{
+        font-size: 2rem;
+        padding-bottom: 20px;
+
+      }
+
+      ul{
+        display: flex;
+        gap: 20px;
+        height: 20rem;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        padding-bottom: 30px;
+
+
+        li{
+          height: auto;
+          transition: all 0.1s ease-in-out;
+          border-radius: 5px;
+          background-color: white;
+
+          .HeartButton{
+            background: white;
+            color: black;
+            border-radius: 100%;
+            display: flex;
+            align-items: center;
+            padding: 5px;
+            position: absolute;
+            top: 5px;
+            right: 5px;
+          }
+          .HeartButton:hover{
+            background: $bg-secondary;
+          }
+
+          a{
+            display: flex;
+            align-items: start;
+            justify-content: start;
+            height: 100%;
+            width: 15rem;
+            gap:10px;
+            flex-direction: column;
+            position: relative;
+            padding: 0px 10px 0px 10px;
+
+            .TrendingTextGroup{
+              display: flex;
+              color: $txt-primary;
+              flex-direction: column;
+              gap:5px;
+              
+              span{
+                display: flex;
+                align-items: center;
+              }
+
+              p:last-child{
+                font-weight: bold;
+              }
+            }
+
+            .TrendingHoverImages{
+              transition: all 0.1s ease-in-out;
+              visibility: hidden;
+              position: absolute;
+              bottom:5.5rem;
+              width: 15rem;
+              height: auto;
+              background-color: white;
+              display: flex;
+              align-items: center;
+
+              img{
+                width:3rem;
+                height:3rem;
+                border: 2px white solid;
+                object-fit: cover;
+                object-position: top;
+              }
+
+              img:hover{
+                border: 2px black solid
+              }
+            }
+          }
+        }
+
+        a:after{
+          content: "";
+          position: absolute;
+          bottom: -30px;
+          left: 0;
+          right: 0;
+          height: 0.5em;
+          border-top: 1px solid lightgray;
+          z-index: -1;
+        }
+
+        li:hover{
+          box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+          .TrendingHoverImages{
+            transform: translateY(-0.2rem);
+          	visibility: visible;
+          }
+        }
+
+        img{
+          object-fit: contain;
+          height: 70%;
+          width: 100%;
+        }
+      }
+    }
   }
 }
 
@@ -350,7 +490,18 @@ body{
     flex-direction: column;
     p{
       font-size: clamp(2rem, 10vw, 5rem) !important;
-
+    }
+  }
+  .TrendingGroup{
+    a{
+      width: 10rem !important;
+    }
+    .TrendingHoverImages{
+      width: 10rem !important;
+      img{
+        width:2rem !important;
+        height:2rem !important;
+      }
     }
   }
 }
