--- a/src/input.scss
+++ b/src/input.scss
@@ -18,7 +18,6 @@ body{
   font-family: 'Roboto', sans-serif;
   // font-size: clamp(10px, 2.5vw, 18px); 
   font-size: clamp(13px, 2.5vw, 16px);
-
 }
 
 .Layout{
@@ -88,6 +87,7 @@ body{
       display:flex;
       align-items: center;
       gap:15px;
+
     }
 
     li:first-child:hover {
@@ -99,6 +99,7 @@ body{
 
     a {
       display:flex;
+      color: $txt-primary;
     }
   }
   // Mobile Nav
@@ -148,19 +149,18 @@ body{
 // Footer
 #footer{
   color: $txt-secondary;
+  font-size: clamp(13px, 2.5vw, 14px);
 }
 
 .footerInfo{
   background: $bg-footer1;
   // padding: 0px 20px 0px 20px;
 
-
   .footerGroup{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px 0 20px 0;
-    font-size: clamp(13px, 2.5vw, 16px);
 
     a{
       color: gray;
@@ -174,7 +174,6 @@ body{
 #Contact{
   background: $bg-footer2;
   padding: 0px 20px 0px 20px;
-
 
   .ContactContainer{
     display: flex;
@@ -234,11 +233,11 @@ body{
         font-size: 2rem;
 
         li {
-          transition: all 0.5s ease-in-out;
+          transition: all 0.2s ease-in-out;
         }
         
         li:hover {
-          transform: scale(120%);
+          transform: scale(110%);
         }
       }
     }
@@ -247,212 +246,272 @@ body{
 // Homepage
 #homepage{
   flex: 1;
+}
+// Hero
+#heroGrid{
+  display: grid;
+  min-height: 40rem;
+  max-height: 40rem;
+  gap: 10px;
+  padding-bottom: 8rem;
+  grid-template: repeat(2, 1fr) / repeat(4, 1fr);
+  
+  .HeroGroup {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
 
-  // Hero
-  #heroGrid{
-    display: grid;
-    min-height: 40rem;
-    max-height: 40rem;
-    gap: 10px;
-    padding-bottom: 8rem;
-    grid-template: repeat(2, 1fr) / repeat(4, 1fr);
-    
-    .HeroGroup {
+    p{
+      color:white;
+      position: absolute;
+      bottom: 1rem;
+      left: 1rem;
+      font-size: clamp(2rem, 2.5vw, 3rem);
+      font-weight: bold;
+    }
+
+    img {
+      object-fit: cover;
+      object-position:40% 20%;
       width: 100%;
       height: 100%;
-      position: relative;
-      overflow: hidden;
+      cursor: pointer;
+      filter: brightness(50%);
+      transition: all 0.3s ease-in-out;
+    }
 
-      p{
-        color:white;
-        position: absolute;
-        bottom: 1rem;
-        left: 1rem;
-        font-size: clamp(2rem, 2.5vw, 3rem);
-
-        font-weight: bold;
+    a:hover{
+      img{
+        filter: brightness(80%);
+        transform: scale(1.2);
       }
-
-      img {
-        object-fit: cover;
-        object-position:40% 20%;
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
-        filter: brightness(50%);
-        transition: all 0.3s ease-in-out;
-      }
-
-      a:hover{
-        img{
-          filter: brightness(80%);
-          transform: scale(1.2);
-        }
-      }
-    }
-
-    .heroItem1{
-      grid-area: 1 / 1 / span 2 / span 2;
-    }
-    .heroItem2{
-      grid-area: 1 / 3 / 1 / 3;
-
-    }
-    .heroItem3{
-      grid-area: 2 / 3 / 2 / 3;
-
-    }
-    .heroItem4{
-      grid-area: 1 / 4 / span 2 / 4;
     }
   }
 
-  // Trending
-  #trendingSection{
-    flex: 1;
+  .heroItem1{
+    grid-area: 1 / 1 / span 2 / span 2;
+  }
+  .heroItem2{
+    grid-area: 1 / 3 / 1 / 3;
 
-    .TrendingGroup{
-      padding-bottom: 8rem;
-      position: relative;
+  }
+  .heroItem3{
+    grid-area: 2 / 3 / 2 / 3;
 
-      .NextButton{
+  }
+  .heroItem4{
+    grid-area: 1 / 4 / span 2 / 4;
+  }
+}
+
+// Trending
+#trendingSection{
+  flex: 1;
+
+  .TrendingGroup{
+    padding-bottom: 8rem;
+    position: relative;
+
+    .NextButton{
+      background-color: white;
+      padding: 3px;
+      cursor: pointer;
+      box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    }
+
+    #left-button{
+      position: absolute;
+      top: 13rem;
+      left: -1rem;
+    }
+
+    #right-button{
+      position: absolute;
+      top: 13rem;
+      right: -1rem;
+    }
+
+    h1{
+      font-size: 2rem;
+      padding-bottom: 20px;
+    }
+
+    ul{
+      display: flex;
+      gap: 20px;
+      height: 25rem;
+      overflow-x: scroll;
+      scroll-behavior: smooth;
+      padding-bottom: 30px;
+
+
+      li{
+        height: auto;
+        transition: all 0.1s ease-in-out;
+        border-radius: 5px;
         background-color: white;
-        padding: 3px;
-        cursor: pointer;
-        box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-      }
 
-      #left-button{
-        position: absolute;
-        top: 13rem;
-        left: -1rem;
-      }
+        .ActionButton{
+          background: white;
+          color: black;
+          border-radius: 100%;
+          display: flex;
+          align-items: center;
+          padding: 5px;
+        }
 
-      #right-button{
-        position: absolute;
-        top: 13rem;
-        right: -1rem;
-      }
+        .HeartButton{
+          position: absolute;
+          top: 12px;
+          right: 10px;
+        }
+        .AddToCartButton{
+          position: absolute;
+          bottom: 12px;
+          right: 10px;
+        }
 
-      h1{
-        font-size: 2rem;
-        padding-bottom: 20px;
+        .ActionButton:hover{
+          background: $bg-secondary;
+        }
 
-      }
+        a{
+          display: flex;
+          align-items: start;
+          justify-content: start;
+          height: 100%;
+          width: 15rem;
+          gap:10px;
+          flex-direction: column;
+          position: relative;
+          padding: 0px 10px 0px 10px;
 
-      ul{
-        display: flex;
-        gap: 20px;
-        height: 20rem;
-        overflow-x: scroll;
-        scroll-behavior: smooth;
-        padding-bottom: 30px;
-
-
-        li{
-          height: auto;
-          transition: all 0.1s ease-in-out;
-          border-radius: 5px;
-          background-color: white;
-
-          .HeartButton{
-            background: white;
-            color: black;
-            border-radius: 100%;
+          .TrendingTextGroup{
             display: flex;
-            align-items: center;
-            padding: 5px;
-            position: absolute;
-            top: 5px;
-            right: 5px;
-          }
-          .HeartButton:hover{
-            background: $bg-secondary;
-          }
-
-          a{
-            display: flex;
-            align-items: start;
-            justify-content: start;
-            height: 100%;
-            width: 15rem;
-            gap:10px;
+            color: $txt-primary;
             flex-direction: column;
-            position: relative;
-            padding: 0px 10px 0px 10px;
-
-            .TrendingTextGroup{
-              display: flex;
-              color: $txt-primary;
-              flex-direction: column;
-              gap:5px;
-              
-              span{
-                display: flex;
-                align-items: center;
-              }
-
-              p:last-child{
-                font-weight: bold;
-              }
-            }
-
-            .TrendingHoverImages{
-              transition: all 0.1s ease-in-out;
-              visibility: hidden;
-              position: absolute;
-              bottom:5.5rem;
-              width: 15rem;
-              height: auto;
-              background-color: white;
+            gap:5px;
+            
+            span{
               display: flex;
               align-items: center;
-
-              img{
-                width:3rem;
-                height:3rem;
-                border: 2px white solid;
-                object-fit: cover;
-                object-position: top;
+              
+              p{
+                padding: 5px;
+                margin-left:5px;
+                background-color: #fbbf24;
               }
+            }
 
-              img:hover{
-                border: 2px black solid
-              }
+            p:last-child{
+              font-weight: bold;
+            }
+          }
+
+          .TrendingHoverImages{
+            transition: all 0.1s ease-in-out;
+            visibility: hidden;
+            position: absolute;
+            bottom:6rem;
+            width: 15rem;
+            height: auto;
+            background-color: white;
+            display: flex;
+            align-items: center;
+
+            img{
+              width:3rem;
+              height:3rem;
+              border: 2px white solid;
+              object-fit: cover;
+              object-position: top;
+            }
+
+            img:hover{
+              border: 2px black solid
             }
           }
         }
+      }
 
-        a:after{
-          content: "";
-          position: absolute;
-          bottom: -30px;
-          left: 0;
-          right: 0;
-          height: 0.5em;
-          border-top: 1px solid lightgray;
-          z-index: -1;
-        }
+      a:after{
+        content: "";
+        position: absolute;
+        bottom: -30px;
+        left: 0;
+        right: 0;
+        height: 0.5em;
+        border-top: 1px solid lightgray;
+        z-index: -1;
+      }
 
-        li:hover{
-          box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-          .TrendingHoverImages{
-            transform: translateY(-0.2rem);
-          	visibility: visible;
-          }
+      li:hover{
+        box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+        .TrendingHoverImages{
+          transform: translateY(-0.2rem);
+          visibility: visible;
         }
+      }
 
-        img{
-          object-fit: contain;
-          height: 70%;
-          width: 100%;
-        }
+      img{
+        object-fit: contain;
+        height: 70%;
+        width: 100%;
       }
     }
   }
 }
 
-// Media
+// Productpage
+#productpage{
+  flex: 1;
+}
+
+#product{
+  height: 40rem;
+  gap: 10px;
+  padding-bottom: 8rem;
+
+  .ProductGroup{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    gap:10px;
+    padding: 10px;
+  
+    img{
+      width: 50%;
+      object-fit: contain;
+      object-position: top;
+    }
+  
+    div{
+      display: flex;
+      flex-direction: column;
+    }
+  
+  }
+}
+
+// reviews
+#reviews{
+  height: 20rem;
+  gap: 10px;
+  padding-bottom: 8rem;
+
+  .ReviewsGroup{
+    background-color: lightcoral;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    padding: 10px;
+  }
+}
+
+// MediaQ
 @media only screen and (max-width: 600px) {
   .ContactContainer{
     justify-content: center;
