--- a/src/output.css
+++ b/src/output.css
@@ -76,6 +76,7 @@ body {
 }
 #navbar .NavItems a {
   display: flex;
+  color: black;
 }
 #navbar .sidenav {
   height: 100%;
@@ -113,6 +114,7 @@ body {
 
 #footer {
   color: white;
+  font-size: clamp(13px, 2.5vw, 14px);
 }
 
 .footerInfo {
@@ -123,7 +125,6 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 20px 0 20px 0;
-  font-size: clamp(13px, 2.5vw, 16px);
 }
 .footerInfo .footerGroup a {
   color: gray;
@@ -188,16 +189,17 @@ body {
   font-size: 2rem;
 }
 #Contact .ContactContainer .ContactGroup #socialGroup li {
-  transition: all 0.5s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 #Contact .ContactContainer .ContactGroup #socialGroup li:hover {
-  transform: scale(120%);
+  transform: scale(110%);
 }
 
 #homepage {
   flex: 1;
 }
-#homepage #heroGrid {
+
+#heroGrid {
   display: grid;
   min-height: 40rem;
   max-height: 40rem;
@@ -205,13 +207,13 @@ body {
   padding-bottom: 8rem;
   grid-template: repeat(2, 1fr)/repeat(4, 1fr);
 }
-#homepage #heroGrid .HeroGroup {
+#heroGrid .HeroGroup {
   width: 100%;
   height: 100%;
   position: relative;
   overflow: hidden;
 }
-#homepage #heroGrid .HeroGroup p {
+#heroGrid .HeroGroup p {
   color: white;
   position: absolute;
   bottom: 1rem;
@@ -219,7 +221,7 @@ body {
   font-size: clamp(2rem, 2.5vw, 3rem);
   font-weight: bold;
 }
-#homepage #heroGrid .HeroGroup img {
+#heroGrid .HeroGroup img {
   object-fit: cover;
   object-position: 40% 20%;
   width: 100%;
@@ -228,78 +230,86 @@ body {
   filter: brightness(50%);
   transition: all 0.3s ease-in-out;
 }
-#homepage #heroGrid .HeroGroup a:hover img {
+#heroGrid .HeroGroup a:hover img {
   filter: brightness(80%);
   transform: scale(1.2);
 }
-#homepage #heroGrid .heroItem1 {
+#heroGrid .heroItem1 {
   grid-area: 1/1/span 2/span 2;
 }
-#homepage #heroGrid .heroItem2 {
+#heroGrid .heroItem2 {
   grid-area: 1/3/1/3;
 }
-#homepage #heroGrid .heroItem3 {
+#heroGrid .heroItem3 {
   grid-area: 2/3/2/3;
 }
-#homepage #heroGrid .heroItem4 {
+#heroGrid .heroItem4 {
   grid-area: 1/4/span 2/4;
 }
-#homepage #trendingSection {
+
+#trendingSection {
   flex: 1;
 }
-#homepage #trendingSection .TrendingGroup {
+#trendingSection .TrendingGroup {
   padding-bottom: 8rem;
   position: relative;
 }
-#homepage #trendingSection .TrendingGroup .NextButton {
+#trendingSection .TrendingGroup .NextButton {
   background-color: white;
   padding: 3px;
   cursor: pointer;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
 }
-#homepage #trendingSection .TrendingGroup #left-button {
+#trendingSection .TrendingGroup #left-button {
   position: absolute;
   top: 13rem;
   left: -1rem;
 }
-#homepage #trendingSection .TrendingGroup #right-button {
+#trendingSection .TrendingGroup #right-button {
   position: absolute;
   top: 13rem;
   right: -1rem;
 }
-#homepage #trendingSection .TrendingGroup h1 {
+#trendingSection .TrendingGroup h1 {
   font-size: 2rem;
   padding-bottom: 20px;
 }
-#homepage #trendingSection .TrendingGroup ul {
+#trendingSection .TrendingGroup ul {
   display: flex;
   gap: 20px;
-  height: 20rem;
+  height: 25rem;
   overflow-x: scroll;
   scroll-behavior: smooth;
   padding-bottom: 30px;
 }
-#homepage #trendingSection .TrendingGroup ul li {
+#trendingSection .TrendingGroup ul li {
   height: auto;
   transition: all 0.1s ease-in-out;
   border-radius: 5px;
   background-color: white;
 }
-#homepage #trendingSection .TrendingGroup ul li .HeartButton {
+#trendingSection .TrendingGroup ul li .ActionButton {
   background: white;
   color: black;
   border-radius: 100%;
   display: flex;
   align-items: center;
   padding: 5px;
-  position: absolute;
-  top: 5px;
-  right: 5px;
 }
-#homepage #trendingSection .TrendingGroup ul li .HeartButton:hover {
+#trendingSection .TrendingGroup ul li .HeartButton {
+  position: absolute;
+  top: 12px;
+  right: 10px;
+}
+#trendingSection .TrendingGroup ul li .AddToCartButton {
+  position: absolute;
+  bottom: 12px;
+  right: 10px;
+}
+#trendingSection .TrendingGroup ul li .ActionButton:hover {
   background: #D9D9D9;
 }
-#homepage #trendingSection .TrendingGroup ul li a {
+#trendingSection .TrendingGroup ul li a {
   display: flex;
   align-items: start;
   justify-content: start;
@@ -310,41 +320,46 @@ body {
   position: relative;
   padding: 0px 10px 0px 10px;
 }
-#homepage #trendingSection .TrendingGroup ul li a .TrendingTextGroup {
+#trendingSection .TrendingGroup ul li a .TrendingTextGroup {
   display: flex;
   color: black;
   flex-direction: column;
   gap: 5px;
 }
-#homepage #trendingSection .TrendingGroup ul li a .TrendingTextGroup span {
+#trendingSection .TrendingGroup ul li a .TrendingTextGroup span {
   display: flex;
   align-items: center;
 }
-#homepage #trendingSection .TrendingGroup ul li a .TrendingTextGroup p:last-child {
+#trendingSection .TrendingGroup ul li a .TrendingTextGroup span p {
+  padding: 5px;
+  margin-left: 5px;
+  background-color: #fbbf24;
+}
+#trendingSection .TrendingGroup ul li a .TrendingTextGroup p:last-child {
   font-weight: bold;
 }
-#homepage #trendingSection .TrendingGroup ul li a .TrendingHoverImages {
+#trendingSection .TrendingGroup ul li a .TrendingHoverImages {
   transition: all 0.1s ease-in-out;
   visibility: hidden;
   position: absolute;
-  bottom: 5.5rem;
+  bottom: 6rem;
   width: 15rem;
   height: auto;
   background-color: white;
   display: flex;
   align-items: center;
 }
-#homepage #trendingSection .TrendingGroup ul li a .TrendingHoverImages img {
+#trendingSection .TrendingGroup ul li a .TrendingHoverImages img {
   width: 3rem;
   height: 3rem;
   border: 2px white solid;
   object-fit: cover;
   object-position: top;
 }
-#homepage #trendingSection .TrendingGroup ul li a .TrendingHoverImages img:hover {
+#trendingSection .TrendingGroup ul li a .TrendingHoverImages img:hover {
   border: 2px black solid;
 }
-#homepage #trendingSection .TrendingGroup ul a:after {
+#trendingSection .TrendingGroup ul a:after {
   content: "";
   position: absolute;
   bottom: -30px;
@@ -354,17 +369,58 @@ body {
   border-top: 1px solid lightgray;
   z-index: -1;
 }
-#homepage #trendingSection .TrendingGroup ul li:hover {
+#trendingSection .TrendingGroup ul li:hover {
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.1);
 }
-#homepage #trendingSection .TrendingGroup ul li:hover .TrendingHoverImages {
+#trendingSection .TrendingGroup ul li:hover .TrendingHoverImages {
   transform: translateY(-0.2rem);
   visibility: visible;
 }
-#homepage #trendingSection .TrendingGroup ul img {
+#trendingSection .TrendingGroup ul img {
   object-fit: contain;
   height: 70%;
   width: 100%;
+}
+
+#productpage {
+  flex: 1;
+}
+
+#product {
+  height: 40rem;
+  gap: 10px;
+  padding-bottom: 8rem;
+}
+#product .ProductGroup {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 10px;
+  padding: 10px;
+}
+#product .ProductGroup img {
+  width: 50%;
+  object-fit: contain;
+  object-position: top;
+}
+#product .ProductGroup div {
+  display: flex;
+  flex-direction: column;
+}
+
+#reviews {
+  height: 20rem;
+  gap: 10px;
+  padding-bottom: 8rem;
+}
+#reviews .ReviewsGroup {
+  background-color: lightcoral;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
 }
 
 @media only screen and (max-width: 600px) {
