--- a/src/input.scss
+++ b/src/input.scss
@@ -341,7 +341,7 @@ body{
       display: flex;
       gap: 20px;
       height: 25rem;
-      overflow-x: scroll;
+      overflow: hidden;
       scroll-behavior: smooth;
       padding-bottom: 30px;
 
@@ -473,24 +473,178 @@ body{
   gap: 10px;
   padding-bottom: 8rem;
 
+  .ProductPrice{
+    font-weight: bold;
+    font-size: 2rem;
+  }
+
   .ProductGroup{
     width: 100%;
     height: 100%;
     display: flex;
-    gap:10px;
-    padding: 10px;
-  
+    gap: 2rem;
+    position: relative;
+
     img{
-      width: 50%;
-      object-fit: contain;
+      width: 35rem;
+      height: 35rem;
+      object-fit: cover;
       object-position: top;
     }
-  
-    div{
+    
+    .ProductHoverImages{
+      transition: all 0.1s ease-in-out;
+      cursor: pointer;
+      width: 30rem;
+      height: auto;
       display: flex;
-      flex-direction: column;
+      width: 100%;
+      align-items: center;
+      justify-content: center;
+      overflow: auto;
+
+      img{
+        width:5rem;
+        height:5rem;
+        border: 2px white solid;
+        object-fit: cover;
+        object-position: top;
+      }
+
+      img:hover{
+        border: 2px black solid
+      }
     }
   
+
+  
+    .ProductBox{
+      display: grid;
+      grid-template: repeat(6,1fr) / repeat(2, 1fr);
+      width: 100%;
+      gap:10px;
+
+      .ProductHeaderGroup{
+        grid-area: 1 / 1 / 1 / 1;
+        
+        p{
+          padding-top: 5px;
+        }
+        h1{
+          font-size: 2rem;
+          font-weight: bold;
+        }
+      }
+      
+      .ProductDesctription{
+        font-size: clamp(16px, 2.5vw, 20px);
+        grid-area: 2 / 1 / 5 / 1 ;
+        
+      }
+
+      .CartButtonGroup{
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        justify-content: end;
+        gap: 10px;
+        grid-area: 5 / 1 / span 6 / 1 ;
+        user-select: none;
+
+        .QuantityGroup{
+          font-size: 40px;
+          .QuantityButton{
+            transition: all 0.1s ease-in-out;
+            cursor: pointer;
+            color:$bg-secondary;
+          }
+          .QuantityButton:hover{
+            color: $bg-footer2;
+
+          }
+          p{
+            font-size: 30px;
+            padding: 0px 10px 0px 10px;
+          }
+        }
+
+        button{
+          padding: 10px 20px 10px 20px;
+          border: 1px solid black;
+          cursor: pointer;
+          font-size: 1.5rem;
+          background-color: white;
+
+        }
+        button:hover{
+          background-color: #3b82f6;
+          border: 1px solid white;
+          color: white
+        }
+
+        div{
+          display: flex;
+          align-items: center;
+        }
+      }
+
+      .RatingGroup{
+        display: flex;
+        align-items: center;
+        padding-top: 5px;
+        p{
+          font-weight: bold;
+          padding: 5px;
+          margin-left:5px;
+          background-color: #fbbf24;
+        }
+      }
+
+      .ProductStockInfo{
+        grid-area: 5 / 2 / span 6 / 2;
+        gap: 5px;
+        display: flex;
+        justify-content: end;
+        flex-direction: column;
+        align-items: start;
+
+        .StockInfoGroup{
+          display: flex;
+          flex-direction: column;
+          gap:5px;
+          border: 1px solid black;
+          padding: 10px;
+          border-radius: 10px;
+        }
+        .StockText{
+          font-size: 2rem;
+        }
+
+        p:first-child{
+          font-weight: bold;
+        }
+
+        span{
+          display: flex;
+          align-items: center;
+          gap:5px;
+        }
+        span:last-child{
+          background-color: $bg-secondary;
+          width: fit-content;
+          padding: 5px;
+          border-radius: 10px;
+          cursor: pointer;
+        }
+        span:last-child:hover{
+          background-color: $bg-footer2;
+          color: white;
+        }
+        span:nth-child(-n + 3){
+          gap: 15px;
+        }
+      }
+    }
   }
 }
 
