--- a/src/input.scss
+++ b/src/input.scss
@@ -16,7 +16,6 @@ $bg-footer2: #3E3B3B;
 }
 body{
   font-family: 'Roboto', sans-serif;
-  // font-size: clamp(10px, 2.5vw, 18px); 
   font-size: clamp(13px, 2.5vw, 16px);
 }
 
@@ -31,10 +30,6 @@ body{
   max-width: 90rem;
   margin: auto;
   padding: 0px 20px 0px 20px;
-  // display: flex;
-  // flex-direction: column;
-  // gap: 10rem;
-
 }
 
 // NavbarStyle
@@ -306,7 +301,7 @@ body{
 }
 
 // Trending
-#trendingSection{
+.trendingSection{
   flex: 1;
 
   .TrendingGroup{
@@ -467,7 +462,6 @@ body{
 #productpage{
   flex: 1;
 }
-
 #product{
   height: 40rem;
   gap: 10px;
@@ -646,6 +640,108 @@ body{
     }
   }
 }
+// Banner
+.BannerReverse{
+  flex-direction: row-reverse;
+}
+.BannerSection{
+  background-color: $bg-secondary;
+  display: flex;
+  height: 35rem;
+  width: 100%;
+  align-items: center;
+  margin-bottom: 8rem;
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
+  img{
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    object-position: left;
+  }
+  div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    span{
+      width: 80%;
+      h1, p, a{
+        margin-bottom: 20px;
+      }
+      a{
+        padding: 1rem 2rem 1rem 2rem;
+        border:none;
+        font-size: 1rem;
+        font-weight: bold;
+        background-color: black;
+        color: white;
+        border: 2px solid black;
+        transition: all 0.2s ease-in-out;
+        cursor: pointer;
+      }
+      a:hover{
+        background-color: $bg-secondary;
+        color: black;
+      }
+    }
+  }
+}
+
+// GetInspired
+.GetInspiredSection{
+  background-color: $bg-secondary;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8rem;
+  font-size: clamp(1rem, 2.5vw, 1.5rem);
+
+  button{
+    width: 10rem;
+    height: 2rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
+  .InspiredGrid{
+    width: 100%;
+    height: 50rem;
+    display: grid;
+    gap: 10px;
+    grid-template: repeat(10, 1fr) / repeat(3, 1fr); 
+
+    div{
+      width: auto;
+      height: auto;
+      background-color: lightcoral;
+    }
+
+    div:first-child{
+      grid-area: 1 / 1 / span 5 / 1;
+    }
+    div:nth-child(2){
+      grid-area: 1 / 2 / span 4 / 2;
+    }
+    div:nth-child(3){
+      grid-area: 1 / 3 / span 5 / 3;
+    }
+    div:nth-child(4){
+      grid-area: 6 / 1 / span 10 / 1;
+    }
+    div:nth-child(5){
+      grid-area: 5 / 2 / 10 / 2;
+    }
+    div:nth-child(6){
+      grid-area: 6 / 3 / span 10 / 3;
+
+    }
+  }
+}
 
 // MediaQ
 @media only screen and (max-width: 1050px) {
@@ -735,6 +831,19 @@ body{
         grid-area: 3 / 1 / 4 / 1 !important;
         align-items: center !important;
       }
+    }
+  }
+  .BannerSection{
+    flex-direction: column;
+
+    img{
+      width: 100%;
+      height: calc(100% - 15rem) !important;
+      object-fit: cover !important;
+      object-position: left;
+    }
+    div{
+      height: 50%;
     }
   }
 }
