fix autoprefixer scss errors

--- a/src/input.scss
+++ b/src/input.scss
@@ -373,8 +373,8 @@ body{
 
         a{
           display: flex;
-          align-items: start;
-          justify-content: start;
+          align-items: flex-start;
+          justify-content: flex-start;
           height: 100%;
           width: 15rem;
           gap:10px;
@@ -476,7 +476,7 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     position: relative;
 
     .ProductMainImg{
@@ -511,6 +511,7 @@ body{
     }
   
     .ProductBox{
+      padding: 10px;
       display: grid;
       grid-template: repeat(6,1fr) / repeat(2, 1fr);
       width: 100%;
@@ -537,8 +538,8 @@ body{
       .CartButtonGroup{
         display: flex;
         flex-direction: column;
-        align-items: start;
-        justify-content: end;
+        align-items: flex-start;
+        justify-content: flex-end;
         gap: 10px;
         grid-area: 5 / 1 / span 6 / 1 ;
         user-select: none;
@@ -596,9 +597,9 @@ body{
         grid-area: 5 / 2 / span 6 / 2;
         gap: 5px;
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         flex-direction: column;
-        align-items: start;
+        align-items: flex-start;
 
         .StockInfoGroup{
           display: flex;
@@ -851,7 +852,7 @@ body{
 @media only screen and (max-width: 600px) {
   .ContactContainer{
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     flex-direction: column;
   }
   .ContactIcon{
