add filter style to allProductPage

--- a/src/input.scss
+++ b/src/input.scss
@@ -830,8 +830,8 @@ body{
       }
       img{
         cursor: pointer;
-        width: 20rem;
-        height: 20rem;
+        width: 15rem;
+        height: 15rem;
         object-position: bottom;
         object-fit: cover;
         border-top-left-radius: 10px;
@@ -889,7 +889,96 @@ body{
       background-color: #1e6ce8;
     }
   }
+}
 
+// AllProductsPage
+#allProductsPage{
+  flex: 1;
+  user-select: none;
+}
+.filterPanelGroup{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:20px;
+}
+.filterButtonGroup{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  width: fit-content;
+  padding: 5px 10px 5px 10px;
+  border: 1px solid black;
+  position: relative;
+  
+  .filterButton{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .priceBefore:before{
+    content: "";
+    background-color: white;
+    position: absolute;
+    top: -5px;
+    width: 99px;
+    height: 5px;
+  }
+  .typeBefore:before{
+    content: "";
+    background-color: white;
+    position: absolute;
+    top: -5px;
+    width: 97px;
+    height: 5px;
+  }
+  .PriceRangeGroup{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .filterList{
+    position: absolute;
+    z-index: 2;
+    border: 1px solid black;
+    top: 37px;
+    display: flex;
+    flex-direction: column;
+    min-width: 11rem;
+    left: -1px;
+
+    button{
+      background-color: $bg-primary;
+      border: 1px solid black;
+      padding: 10px;
+      cursor: pointer;
+      width: 100%;
+    }
+    button:hover{
+      background-color: $bg-secondary;
+    }
+
+    li{
+      background-color: white;
+      padding: 10px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    li:hover{
+      background-color: $bg-secondary;
+    }
+  }
+
+  .filterMark{
+    background-color: black;
+    color: white;
+    padding: 4px;
+    margin: 0px 5px 0px 5px;
+  }
 }
 
 // MediaQ
