--- a/src/input.scss
+++ b/src/input.scss
@@ -790,6 +790,8 @@ body{
   align-items: center;
   justify-content: center;
   gap:20px;
+  width: fit-content;
+  margin: auto;
 }
 .filterButtonGroup{
   display: flex;
@@ -880,18 +882,22 @@ body{
 // Item
 .AllItemGroup{
   height: 100%;
+  width: 100%;
   margin-top: 2rem;
   margin-bottom: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
   gap: 5rem;
-  flex-wrap: wrap;
+
 }
 
 .ProductFrame:hover{
   box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   
+  .IconBottom{
+    display: block;
+  }
   .ProductImages{
     visibility: visible;
     transform: translateY(-0.2rem);
@@ -923,7 +929,7 @@ body{
     visibility: hidden;
     position: absolute;
     background-color: white;
-    bottom: 6.5rem;
+    bottom: 7rem;
     left: 0.6rem;
     width: 15rem;
     display: flex;
@@ -957,6 +963,7 @@ body{
       display: flex;
       gap: 10px;
       flex-direction: column;
+      justify-content: center;
       height: 30%;
       
       span{
@@ -986,12 +993,12 @@ body{
     text-align: center;
     background-color: white;
     border-radius: 100%;
-    z-index: 10;
   }
   .IconTop{
     top:10px;
   }
   .IconBottom{
+    display: none;
     bottom:10px;
   }
   .ProductIcon:hover{
