add favPage and CartPage functionalities (add,remove item)

--- a/src/input.scss
+++ b/src/input.scss
@@ -70,6 +70,24 @@ body{
     gap:15px;
     text-transform: upperCase;
 
+    .HeartIcon{
+      position: relative;
+      span{
+        background-color: red;
+        position: absolute;
+        top: -5px;
+        right: -12px;
+        color: white;
+        font-size: 13px;
+        padding: 3px;
+        width: 13px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100%;
+      }
+    }
+
     li:first-child:after{
       content: "";
       display:block;
@@ -643,6 +661,9 @@ body{
 // cartpage
 #cartpage{
   flex: 1;
+  h1{
+    text-align: center;
+  }
 }
 .cartGroup{
   min-height: 50rem;
@@ -654,8 +675,10 @@ body{
     max-height: 50rem;
     width: 100%;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    gap: 10px;
     position: relative;
 
 
